--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tooltipAppNg7": {
+    "ngx-tooltip-9": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/tooltipAppNg7",
+            "outputPath": "dist/ngx-tooltip-9",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tooltipAppNg7:build"
+            "browserTarget": "ngx-tooltip-9:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tooltipAppNg7:build:production"
+              "browserTarget": "ngx-tooltip-9:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tooltipAppNg7:build"
+            "browserTarget": "ngx-tooltip-9:build"
           }
         },
         "test": {
@@ -112,7 +112,7 @@
         }
       }
     },
-    "tooltipAppNg7-e2e": {
+    "ngx-tooltip-9-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -121,11 +121,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "tooltipAppNg7:serve"
+            "devServerTarget": "ngx-tooltip-9:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tooltipAppNg7:serve:production"
+              "devServerTarget": "ngx-tooltip-9:serve:production"
             }
           }
         },
@@ -181,5 +181,5 @@
       }
     }
   },
-  "defaultProject": "tooltipAppNg7"
+  "defaultProject": "ngx-tooltip-9"
 }
