--- a/angular.json
+++ b/angular.json
@@ -140,38 +140,38 @@
         }
       }
     },
-    "ng2-tooltip-directive": {
-      "root": "projects/ng2-tooltip-directive",
-      "sourceRoot": "projects/ng2-tooltip-directive/src",
+    "ngx-tooltip-directive": {
+      "root": "projects/ngx-tooltip-directive",
+      "sourceRoot": "projects/ngx-tooltip-directive/src",
       "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/ng2-tooltip-directive/tsconfig.lib.json",
-            "project": "projects/ng2-tooltip-directive/ng-package.json"
+            "tsConfig": "projects/ngx-tooltip-directive/tsconfig.lib.json",
+            "project": "projects/ngx-tooltip-directive/ng-package.json"
           }
         ,          "configurations": {
             "production": {
-              "tsConfig": "projects/ng2-tooltip-directive/tsconfig.lib.prod.json"
+              "tsConfig": "projects/ngx-tooltip-directive/tsconfig.lib.prod.json"
             }
           }
 },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/ng2-tooltip-directive/src/test.ts",
-            "tsConfig": "projects/ng2-tooltip-directive/tsconfig.spec.json",
-            "karmaConfig": "projects/ng2-tooltip-directive/karma.conf.js"
+            "main": "projects/ngx-tooltip-directive/src/test.ts",
+            "tsConfig": "projects/ngx-tooltip-directive/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-tooltip-directive/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/ng2-tooltip-directive/tsconfig.lib.json",
-              "projects/ng2-tooltip-directive/tsconfig.spec.json"
+              "projects/ngx-tooltip-directive/tsconfig.lib.json",
+              "projects/ngx-tooltip-directive/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
