--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,11 @@
       "dom"
     ],
     "paths": {
-      "ng2-tooltip-directive": [
-        "dist/ng2-tooltip-directive"
+      "ngx-tooltip-directive": [
+        "dist/ngx-tooltip-directive"
       ],
-      "ng2-tooltip-directive/*": [
-        "dist/ng2-tooltip-directive/*"
+      "ngx-tooltip-directive/*": [
+        "dist/ngx-tooltip-directive/*"
       ]
     }
   }
